# linux-cmd-dashboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  linux-cmd-dashboard.desktop
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
knowledge-base/: Architecture.md  Decision Log.md  Development Log.md  Home.md  Testing.md
scripts/: install-linux.sh  package-linux.sh
src/: app.rs  config.rs  layout.rs  lib.rs  main.rs  runtime_env.rs
