[package]
name = "linux-cmd-dashboard"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Single-window tiling terminal manager for Linux"

[dependencies]
anyhow = "1"
dirs = "5"
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"], optional = true }
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"], optional = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
vte = { package = "vte4", version = "0.8", optional = true }

[features]
default = ["gui"]
gui = ["adw", "gtk", "vte"]

[dev-dependencies]
tempfile = "3"
